corrected spacing

--- a/src/styles/_network.scss
+++ b/src/styles/_network.scss
@@ -4,9 +4,9 @@ div.vis-network-tooltip {
   padding: 5px;
   white-space: nowrap;
 
-  font-family: Open Sans;
-  font-size:14px;
-  color:#24293D;
+  font-family: 'Open Sans';
+  font-size: 14px;
+  color: #24293D;
   background-color: $CloudColor;
   border: 0px;
   pointer-events: none;
@@ -20,7 +20,7 @@ div.vis-network div.vis-navigation div.vis-button:active {
 
 div.vis-network div.vis-navigation div.vis-button.vis-zoomIn {
   background-image: url("../static/img/plus.png");
-  bottom:30px;
+  bottom: 30px;
   position: absolute;
   height: 30px;
   width: 30px;
@@ -28,7 +28,7 @@ div.vis-network div.vis-navigation div.vis-button.vis-zoomIn {
 }
 div.vis-network div.vis-navigation div.vis-button.vis-zoomOut {
   background-image: url("../static/img/minus.png");
-  bottom:0px;
+  bottom: 0px;
   position: absolute;
   height: 30px;
   width: 30px;
@@ -36,7 +36,7 @@ div.vis-network div.vis-navigation div.vis-button.vis-zoomOut {
 }
 div.vis-network div.vis-navigation div.vis-button.vis-zoomExtends {
   background-image: url("../static/img/zoomExtends.png");
-  bottom:60px;
+  bottom: 60px;
   position: absolute;
   height: 30px;
   width: 30px;
